--- a/src/components/PostCard/index.astro
+++ b/src/components/PostCard/index.astro
@@ -31,6 +31,7 @@ const { post } = Astro.props;
       aspect-ratio: 16/9;
       position: relative;
       border-radius: 15px;
+      background-color: $color-bg;
       display: block;
       overflow: hidden;
       box-shadow: $shadow;
