change: コントラスト

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -31,12 +31,12 @@ const year = new Date().getFullYear();
       .line {
         width: 100%;
         height: 1.5px;
-        background-color: $color-on-bg-light;
+        background-color: $color-on-bg;
       }
 
       .contact,
       .contact > a {
-        color: $color-on-bg-light;
+        color: $color-text;
       }
     }
   }
