feat: スマホはカードが背景を透かすように変更

--- a/src/layouts/CardLayout.astro
+++ b/src/layouts/CardLayout.astro
@@ -31,6 +31,8 @@ const { title, createdAt, class: className, noCardOnMobile, ...props } = Astro.p
         padding: 0;
         box-shadow: none;
         border-radius: 0;
+        background-color: transparent;
+        backdrop-filter: blur(3px);
       }
     }
 
