--- a/src/pages/_sections/TopSection.astro
+++ b/src/pages/_sections/TopSection.astro
@@ -23,6 +23,7 @@ const { class: className, ...props } = Astro.props;
   .logo {
     display: block;
     margin-inline: auto;
+    border-radius: calc(infinity);
   }
 
   h2 {
