feat: 記事削除機能

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,6 +1,5 @@
 ---
 import { Image } from 'astro:assets';
-import kaji from '@/assets/kaji.webp';
 import HamburgerMenu from './HamburgerMenu.astro';
 import { getPages } from '@/utils/content';
 
@@ -20,7 +19,7 @@ const paths: Path[] = [
   <nav>
     <div class:list={['container', 'logo']}>
       <a href="/">
-        <Image src={kaji} alt="梶研ロゴ" height="40" width="40" densities={[2]} />
+        <Image src={'/img//kaji.webp'} alt="梶研ロゴ" height="40" width="40" densities={[2]} />
         <h1 class="title">Kaji Lab</h1>
       </a>
     </div>
