--- a/src/pages/_sections/TopSection.astro
+++ b/src/pages/_sections/TopSection.astro
@@ -1,21 +1,24 @@
 ---
 import { Image } from 'astro:assets';
 import CardLayout from '@/layouts/CardLayout.astro';
+import { getSection } from '@/utils/content';
+import { render } from 'astro:content';
+
+const section = await getSection('top');
+
+if (!section) throw new Error('Section not found');
 
 interface Props {
   class?: string;
 }
-
 const { class: className, ...props } = Astro.props;
+const { Content } = await render(section);
 ---
 
 <CardLayout class={className} {...props} noCardOnMobile>
-  <Image class="logo" src='/img/kaji.webp' alt="梶研ロゴ" width="120" height="120" densities={[2]} />
-  <h2>KAJI LABORATORY</h2>
-  <p>
-    正式な研究室名は行動情報科学研究室です．行動をセンシングし，行動をデザインする研究室です．
-    スマートフォン等の各種センサを用いた屋内位置推定・行動認識技術の追求と，それに基づいた人間拡張や行動変容に資するシステムの実現を目指します．
-  </p>
+  <Image class="logo" src="/img/kaji.webp" alt="梶研ロゴ" width="120" height="120" densities={[2]} />
+  <h2>{section.data.title}</h2>
+  <Content />
 </CardLayout>
 
 <style lang="scss">
