--- a/src/pages/_sections/TechStack.astro
+++ b/src/pages/_sections/TechStack.astro
@@ -61,19 +61,12 @@ const { class: className, ...props } = Astro.props;
   </div>
 </CardLayout>
 
-<script is:inline defer>
-  function changeTechStack() {
-    const techstack = document.getElementById('techstack');
-    const show = localStorage.getItem('tech') === 'show';
-
-    if (!techstack) return;
-
-    if (show && techstack) techstack.style.display = 'block';
-    else techstack.style.display = 'none';
-  }
-
-  window.addEventListener('storage', changeTechStack);
-  window.addEventListener('load', changeTechStack);
+<script>
+  const show = localStorage.getItem('tech') === 'show';
+  const techstack = document.getElementById('techstack');
+  console.log({ show, techstack });
+  if (show && techstack) techstack.style.display = 'block';
+  else localStorage.setItem('tech', '');
 </script>
 
 <style lang="scss">
