change: 投稿のパスを変更

--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -10,7 +10,7 @@ export async function getStaticPaths() {
   const posts = await getPosts();
 
   return posts.map((post) => ({
-    params: { id: post.data.number },
+    params: { id: post.data.pageId },
     props: post,
   }));
 }
