--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -19,7 +19,7 @@ const paths: Path[] = [
   <nav>
     <div class:list={['container', 'logo']}>
       <a href="/">
-        <Image src={'/img//kaji.webp'} alt="梶研ロゴ" height="40" width="40" densities={[2]} />
+        <Image src="/img/kaji.webp" alt="これは何の生物でしょうか？ → コンソールにて `whatCreature()`" height="40" width="40" densities={[2]} />
         <h1 class="title">Kaji Lab</h1>
       </a>
     </div>
@@ -37,6 +37,18 @@ const paths: Path[] = [
     <HamburgerMenu class="hamburger" paths={paths} />
   </nav>
 </header>
+
+<script>
+  declare global {
+    interface Window {
+      whatCreature: Function;
+    }
+  }
+
+  window.whatCreature = () => {
+    window.location.href = '/mogura';
+  };
+</script>
 
 <style lang="scss">
   header {
