--- a/src/pages/_sections/TopSection.astro
+++ b/src/pages/_sections/TopSection.astro
@@ -19,7 +19,7 @@ const { Content } = await render(section);
   <Image
     id="top-section-logo"
     class="logo"
-    src="/img/kaji.webp"
+    src="/img/kaji_original.webp"
     alt="これは何の生物でしょうか？ → コンソールにて `whatCreature()`"
     width="120"
     height="120"
