--- a/src/pages/_sections/AboutSection.astro
+++ b/src/pages/_sections/AboutSection.astro
@@ -22,7 +22,8 @@ const { Content } = await render(section);
     <Content />
   </article>
 
-  <a class="detail" href="/about">詳しく見る</a>
+  <a class="detail" href="/research">研究内容についての詳細</a>
+  <a class="detail" href="/about">研究室生活についての詳細</a>
 </CardLayout>
 
 <style lang="scss">
