fix: teapotページのprerenderをfalse

--- a/src/pages/teapot.astro
+++ b/src/pages/teapot.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 
-export const prerender = true;
+export const prerender = false;
 
 Astro.response.status = 418;
 Astro.response.statusText = "I'm a teapot";
