feat: TechStackページに技術スタックの説明を追加

--- a/src/pages/_sections/TechStack.astro
+++ b/src/pages/_sections/TechStack.astro
@@ -30,6 +30,9 @@ const { class: className, ...props } = Astro.props;
 ---
 
 <CardLayout id="techstack" class:list={[className, 'container']} title="技術スタック" {...props} id="techstack">
+  <p>以下は現在使用している技術スタックの一例です.</p>
+  <p>梶研究室では研究の必要に応じて学ぶというスタンスです.</p>
+
   <h2>データサイエンス</h2>
   <div class="icons">
     <Python />
